// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro babel 6 css 1`] = `
"import { css as _css } from \\"../src\\";

/*#__PURE__*/
_css(\\"margin:12px 48px;color:#ffffff;display:flex;flex:1 0 auto;color:blue;width:\\", widthVar, \\";\\");"
`;

exports[`macro babel 6 css call with no args 1`] = `
"import { css as _css } from \\"../src\\";

const cls1 =
/*#__PURE__*/
_css();"
`;

exports[`macro babel 6 css inside of css 1`] = `
"import { css as _css } from \\"../src\\";

const cls2 =
/*#__PURE__*/
_css(\\"font-size:20px;@media (min-width:420px){color:blue;\\",
/*#__PURE__*/
_css(\\"width:96px;height:96px;\\"), \\";line-height:40px;}background:green;\\");"
`;

exports[`macro babel 6 css object 1`] = `
"import { css as _css } from \\"../src\\";

const cls1 =
/*#__PURE__*/
_css({
  display: 'flex'
});"
`;

exports[`macro babel 6 flush 1`] = `
"import { flush as _flush } from \\"../src\\";
const someOtherVar = _flush;"
`;

exports[`macro babel 6 hydrate 1`] = `
"import { hydrate as _hydrate } from \\"../src\\";
const someOtherVar = _hydrate;"
`;

exports[`macro babel 6 injectGlobal 1`] = `
"import { injectGlobal as _injectGlobal } from \\"../src\\";

_injectGlobal(\\"body{margin:0;padding:0;& > div{display:none;&:hover{color:green;& span{color:red;&:after{content:\\\\\\"end of line\\\\\\"}}}}}html{background:green;}\\");"
`;

exports[`macro babel 6 keyframes 1`] = `
"import { keyframes as _keyframes } from \\"../src\\";

const rotate360 =
/*#__PURE__*/
_keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");"
`;

exports[`macro babel 6 multiple imports 1`] = `
"import { keyframes as _keyframes, css as _css } from \\"../src\\";

const rotate360 =
/*#__PURE__*/
_keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");

const thing =
/*#__PURE__*/
_css(\\"margin:12px 48px;color:#ffffff;display:flex;flex:1 0 auto;color:blue;width:\\", widthVar, \\";\\");"
`;

exports[`macro babel 6 some import that does not exist 1`] = `
"import { thisDoesNotExist as _thisDoesNotExist } from \\"../src\\";
const someOtherVar = _thisDoesNotExist;"
`;

exports[`macro babel 7 css 1`] = `
"import { css as _css } from \\"../src\\";

/*#__PURE__*/
_css(\\"margin:12px 48px;color:#ffffff;display:flex;flex:1 0 auto;color:blue;width:\\", widthVar, \\";\\");"
`;

exports[`macro babel 7 css call with no args 1`] = `
"import { css as _css } from \\"../src\\";

const cls1 =
/*#__PURE__*/
_css();"
`;

exports[`macro babel 7 css inside of css 1`] = `
"import { css as _css } from \\"../src\\";

const cls2 =
/*#__PURE__*/
_css(\\"font-size:20px;@media (min-width:420px){color:blue;\\",
/*#__PURE__*/
_css(\\"width:96px;height:96px;\\"), \\";line-height:40px;}background:green;\\");"
`;

exports[`macro babel 7 css object 1`] = `
"import { css as _css } from \\"../src\\";

const cls1 =
/*#__PURE__*/
_css({
  display: 'flex'
});"
`;

exports[`macro babel 7 flush 1`] = `
"import { flush as _flush } from \\"../src\\";
const someOtherVar = _flush;"
`;

exports[`macro babel 7 hydrate 1`] = `
"import { hydrate as _hydrate } from \\"../src\\";
const someOtherVar = _hydrate;"
`;

exports[`macro babel 7 injectGlobal 1`] = `
"import { injectGlobal as _injectGlobal } from \\"../src\\";

_injectGlobal(\\"body{margin:0;padding:0;& > div{display:none;&:hover{color:green;& span{color:red;&:after{content:\\\\\\"end of line\\\\\\"}}}}}html{background:green;}\\");"
`;

exports[`macro babel 7 keyframes 1`] = `
"import { keyframes as _keyframes } from \\"../src\\";

const rotate360 =
/*#__PURE__*/
_keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");"
`;

exports[`macro babel 7 multiple imports 1`] = `
"import { keyframes as _keyframes, css as _css } from \\"../src\\";

const rotate360 =
/*#__PURE__*/
_keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");

const thing =
/*#__PURE__*/
_css(\\"margin:12px 48px;color:#ffffff;display:flex;flex:1 0 auto;color:blue;width:\\", widthVar, \\";\\");"
`;

exports[`macro babel 7 some import that does not exist 1`] = `
"import { thisDoesNotExist as _thisDoesNotExist } from \\"../src\\";
const someOtherVar = _thisDoesNotExist;"
`;

exports[`styled macro babel 6 css from react 1`] = `
"import { css as _css } from \\"./styled\\";

const someCls =
/*#__PURE__*/
_css(\\"display:flex;\\");"
`;

exports[`styled macro babel 6 object function 1`] = `
"import _styled from \\"./styled\\";

const SomeComponent =
/*#__PURE__*/
_styled('div', {
  target: \\"ef2fk0r0\\"
})({
  display: 'flex'
});"
`;

exports[`styled macro babel 6 object member 1`] = `
"import _styled from \\"./styled\\";

const SomeComponent =
/*#__PURE__*/
_styled(\\"div\\", {
  target: \\"ef2fk0r0\\"
})({
  display: 'flex'
});"
`;

exports[`styled macro babel 6 some import that does not exist 1`] = `
"import { thisDoesNotExist as _thisDoesNotExist } from \\"./styled\\";
const someOtherVar = _thisDoesNotExist;"
`;

exports[`styled macro babel 6 tagged template literal function 1`] = `
"import _styled from \\"./styled\\";

const SomeComponent =
/*#__PURE__*/
_styled('div', {
  target: \\"ef2fk0r0\\"
})(\\"display:flex;\\");"
`;

exports[`styled macro babel 6 tagged template literal member 1`] = `
"import _styled from \\"./styled\\";

const SomeComponent =
/*#__PURE__*/
_styled(\\"div\\", {
  target: \\"ef2fk0r0\\"
})(\\"display:flex;\\");"
`;

exports[`styled macro babel 7 css from react 1`] = `
"import { css as _css } from \\"./styled\\";

const someCls =
/*#__PURE__*/
_css(\\"display:flex;\\");"
`;

exports[`styled macro babel 7 object function 1`] = `
"import _styled from \\"./styled\\";

const SomeComponent =
/*#__PURE__*/
_styled('div', {
  target: \\"ef2fk0r0\\"
})({
  display: 'flex'
});"
`;

exports[`styled macro babel 7 object member 1`] = `
"import _styled from \\"./styled\\";

const SomeComponent =
/*#__PURE__*/
_styled(\\"div\\", {
  target: \\"ef2fk0r0\\"
})({
  display: 'flex'
});"
`;

exports[`styled macro babel 7 some import that does not exist 1`] = `
"import { thisDoesNotExist as _thisDoesNotExist } from \\"./styled\\";
const someOtherVar = _thisDoesNotExist;"
`;

exports[`styled macro babel 7 tagged template literal function 1`] = `
"import _styled from \\"./styled\\";

const SomeComponent =
/*#__PURE__*/
_styled('div', {
  target: \\"ef2fk0r0\\"
})(\\"display:flex;\\");"
`;

exports[`styled macro babel 7 tagged template literal member 1`] = `
"import _styled from \\"./styled\\";

const SomeComponent =
/*#__PURE__*/
_styled(\\"div\\", {
  target: \\"ef2fk0r0\\"
})(\\"display:flex;\\");"
`;

exports[`styled macro inserts unique AST nodes 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.demibold = exports.normal = void 0;

var _styled = require(\\"./styled\\");

const normal =
/*#__PURE__*/
(0, _styled.css)(\\"font-weight:400;\\");
exports.normal = normal;
const demibold =
/*#__PURE__*/
(0, _styled.css)(\\"font-weight:600;\\");
exports.demibold = demibold;"
`;
